--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/typescript-estree": "^5.59.7",
     "react": "^18.2.0",
     "react-anchor-navigation": "^0.2.6",
+    "react-circle-flags": "^0.0.18",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
@@ -38,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "stylelint": "^15.6.2",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0"
   }
 }
