--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-anchor-navigation": "^0.2.6",
     "react-circle-flags": "^0.0.18",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.4.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^5.0.4",
