--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
